--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "firebase": "^9.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.1",
